# mtop

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  COLLABORATION.md  COLLABORATION_UPDATE.md  CONFIG.md  DEMO-GUIDE.md  DEMO-INSTRUCTIONS.md  DETAILED_ANALYSIS.md  FIXUP_PLAN.md  IMPLEMENTATION_RECOMMENDATION.md  PR-SUMMARY.md  README.md  ROADMAP.md  SALES-DEMO-GUIDE.md  SECURITY.md  build.py  claude-slash-README.md  claude-slash-command.md  claude-slash-examples.md  column_engine.py  config.yaml  config_loader.py  conftest.py  demo.sh  demo_cast.sh  demo_full.sh  demo_functions.sh  demo_monitor.py  demo_narrator.py  demo_split.sh  kubectl-ld  mtop-main  mtop.bash  pyproject.toml  release_kubectl_ld.sh  release_mtop.sh  (+4 more)
.claude/checkpoints/: checkpoint-2025-07-03-20-19-28.json  checkpoint-2025-07-04-01-26-45.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  demo-scenario.md  feature.md  research.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yaml  ci.yml  claude.yml  codeql.yml  demo-test.yml  progress-tracker.yml  record-demos.yml  release.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
config/: issue_lifecycle.yaml
config/claude/: CLAUDE.md
demos/: README.md  VISUALIZATION-EXCELLENCE.md  autonomous-slo-convergence.tape  integrated_visualization_demo.py  visualization-excellence.tape
demos/recipes/: canary-failure.yaml  cost-optimization.yaml  enterprise.yaml  research-lab.yaml  startup.yaml
docs/: COLLABORATION.md  Phase1-Demo-Guide.md  README.md  ROADMAP.md
docs/architecture/: README.md
docs/artifacts/: README.md
docs/examples/: README.md
docs/guides/: README.md  quick-start.md
docs/performance/: README.md
docs/reference/: README.md
docs/security/: README.md
kubectl_ld/: __init__.py  async_cli.py  cache.py  container.py  implementations.py  interfaces.py  logging.py
mock/: vhs.demo
mock/crs/: albert-base-v2.json  deepset_roberta-base-squad2.json  distilbert-base-uncased.json  facebook_bart-large.json  google_electra-base-discriminator.json  gpt2.json  roberta-base.json  sentence-transformers_all-MiniLM-L6-v2.json  stabilityai_stablelm-3b-4e1t.json  t5-base.json  test-model.json  xlnet-base-cased.json
mock/pod_logs/: llm-003.txt
mocks/config/: cost-optimized-config.json  development-config.json  edge-config.json  enterprise-config.json  gpu-cluster-config.json  high-availability-config.json  llminferenceserviceconfig.json  multi-tenant-config.json  production-config.json  research-config.json  staging-config.json
mocks/crs/: EleutherAI_gpt-neo-1.3B.json  Qwen_Qwen1.5-0.5B.json  TinyLlama_TinyLlama-1.1B-Chat-v1.0.json  bert-base-cased.json  bert-base-uncased.json  claude-3-haiku.json  claude-3-opus.json  codellama-34b-instruct.json  deepseek-r1-distill-llama-8b.json  deepseek-r1-distill-qwen-1_5b.json  facebook_mbart-large-50.json  gemini-pro.json  gpt-4-turbo.json  granite-3-2b-instruct.json  granite-3-8b-instruct.json  llama-3-70b-instruct.json  llama-3-8b-instruct.json  microsoft_DialoGPT-medium.json  microsoft_codebert-base.json  mixtral-8x7b-instruct.json  openai_whisper-base.json  phi-3-medium-instruct.json  stable-code-instruct-3b.json
mocks/pod_logs/: claude-3-haiku-001.txt  codellama-34b-001.txt  deepseek-r1-8b-001.txt  gpt-4-turbo-001.txt  granite-3-8b-001.txt  llama-3-70b-001.txt  llama-3-8b-001.txt  mixtral-8x7b-001.txt  phi-3-medium-001.txt  stable-code-3b-001.txt
mtop/: __init__.py  async_cli.py  cache.py  column_engine.py  config_loader.py  container.py  cost_optimizer.py  dra_fractioning.py  executive_view.py  gpu_heartbeat.py  heartbeat_visualizer.py  implementations.py  interfaces.py  kubectl-ldtop  logging.py  queue_management.py  real_time_updates.py  slo_convergence.py  slo_dashboard.py  token_metrics.py  user_config.py  watch_rollout.py  workload_generator.py
recordings/: README.md  basic-demo.cast  basic-meta.json  full-demo.cast  full-meta.json  index.html  preview.sh  split-basic-demo.cast  split-chaos-demo.cast  split-multi-demo.cast  split-surge-demo.cast
recordings/sales/: complete-value-proposition-simple.webm  load-handling.webm
reports/: 2025-07-04.md  2025-07-05.md  2025-07-06.md  dashboard.md
sales-demo-package/: README.md
sales-package/: README.md  package-manifest.json
sales-package/docs/: ROI-Calculator.md  Sales-Talking-Points.md
scripts/: config-mixer.py  convert_demos.sh  demo.py  demo_phase1_cost_optimization.py  demo_phase1_quick.py  generate_vhs_tapes.sh  issue_lifecycle_manager.py  lint.sh  record_demo.sh  record_sales_demos.sh  setup-branch-protection.md
scripts/demos/: demo-cleanup.sh  (+4 more)
tapes/: complete-value-proposition-simple.tape  complete-value-proposition.tape  core-infrastructure-showcase.tape  cost-optimization-simple.tape  cost-optimization.tape  gpu-efficiency-simple.tape  gpu-efficiency.tape  load-handling-simple.tape  load-handling.tape  manifest.json  model-deployment-demo.tape  multi-model-simple.tape  multi-model.tape  phase1-cost-optimization.tape  phase1-quick-demo.tape  phase1-sales-demo.tape  phase1-test.tape  slo-compliance-simple.tape  slo-compliance.tape  test-simple.tape  traffic-spike-demo.tape
templates/: README.md.template  main-program.py.template
tests/: test_cli.py  test_cli_basics.py  test_config_basics.py  test_config_integration.py  test_container.py  test_cost_calculator.py  test_cost_optimizer.py  test_dataclasses.py  test_dra_fractioning.py  test_executive_view.py  test_gpu_heartbeat.py  test_heartbeat_visualizer.py  test_imports.py  test_integration.py  test_kubectl_ld.py  test_kubectl_ld_unit.py  test_legacy_cleanup.py  test_new_architecture.py  test_phase1_integration.py  test_queue_management.py  test_real_time_updates.py  test_rollout_simulation.py  test_slo_config.py  test_slo_convergence.py  test_slo_dashboard.py  test_technology_config.py  test_token_metrics.py  test_user_config.py  test_workload_config.py  test_workload_generator.py
(+23 files in other folders)
