[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mtop"
dynamic = ["version"]
description = "Model Top - Real-time ML monitoring and debugging tool for LLMInferenceService CRDs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jeremy Eder", email = "jeder@redhat.com"},
]
maintainers = [
    {name = "Jeremy Eder", email = "jeder@redhat.com"},
]
keywords = ["kubernetes", "llm", "monitoring", "debugging", "simulation", "mtop", "model-top"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0,<7.0",
    "termcolor>=2.3.0,<4.0",
    "rich>=13.0.0,<15.0",
    "readchar>=4.0.0,<5.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0,<9.0",
    "pytest-cov>=4.0.0,<7.0",
    "pytest-asyncio>=0.21.0,<1.0",
]
security = [
    "safety>=3.0.0,<4.0",
    "bandit>=1.7.0,<2.0",
]
performance = [
    "ijson>=3.2.0,<4.0",
]
dev = [
    "mtop[test,security,performance]",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pylint>=2.17.0",
    "radon>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/jeremyeder/mtop"
Repository = "https://github.com/jeremyeder/mtop.git"
Issues = "https://github.com/jeremyeder/mtop/issues"
Changelog = "https://github.com/jeremyeder/mtop/releases"

[project.scripts]
mtop = "mtop:main"
watch-rollout = "watch_rollout:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mtop*"]
exclude = ["tests*", "mock*", "mocks*", "tapes*", "demos*", "config*", "reports*", "templates*", "recordings*"]

[tool.setuptools]
py-modules = ["config_loader", "column_engine", "watch_rollout"]

[tool.setuptools_scm]
write_to = "mtop/_version.py"

[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
) | mtop/_version\.py
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = ["mtop/_version.py"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
strict_optional = true
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = "C0330, C0326, C0103, W0622, R0903, R0913"

[tool.pylint.format]
max-line-length = "100"

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    "setup.py",
    "*/venv/*",
    "*/.venv/*",
    "watch_rollout.py",
    "mtop/watch_rollout.py",
    "mtop/__init__.py",
    "mtop/_version.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]